// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`moderation-statuses query statuses returns statuses filtered by subject language 1`] = `
[
  {
    "accountStats": {
      "$type": "tools.ozone.moderation.defs#accountStats",
      "appealCount": 0,
      "escalateCount": 0,
      "reportCount": 2,
      "suspendCount": 0,
      "takedownCount": 0,
    },
    "ageAssuranceState": "unknown",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "hosting": {
      "$type": "tools.ozone.moderation.defs#recordHosting",
      "status": "unknown",
    },
    "id": 7,
    "lastReportedAt": "1970-01-01T00:00:00.000Z",
    "priorityScore": 0,
    "recordsStats": {
      "$type": "tools.ozone.moderation.defs#recordsStats",
      "appealedCount": 0,
      "escalatedCount": 0,
      "pendingCount": 1,
      "processedCount": 0,
      "reportedCount": 1,
      "subjectCount": 1,
      "takendownCount": 0,
      "totalReports": 2,
    },
    "reviewState": "tools.ozone.moderation.defs#reviewOpen",
    "subject": {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
    "subjectBlobCids": [],
    "subjectRepoHandle": "bob.test",
    "tags": [
      "report:spam",
      "lang:en",
      "lang:i",
    ],
    "takendown": false,
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
  {
    "accountStats": {
      "$type": "tools.ozone.moderation.defs#accountStats",
      "appealCount": 0,
      "escalateCount": 0,
      "reportCount": 2,
      "suspendCount": 0,
      "takedownCount": 0,
    },
    "ageAssuranceState": "unknown",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "hosting": {
      "$type": "tools.ozone.moderation.defs#accountHosting",
      "status": "unknown",
    },
    "id": 5,
    "lastReportedAt": "1970-01-01T00:00:00.000Z",
    "priorityScore": 0,
    "recordsStats": {
      "$type": "tools.ozone.moderation.defs#recordsStats",
      "appealedCount": 0,
      "escalatedCount": 0,
      "pendingCount": 1,
      "processedCount": 0,
      "reportedCount": 1,
      "subjectCount": 1,
      "takendownCount": 0,
      "totalReports": 2,
    },
    "reviewState": "tools.ozone.moderation.defs#reviewOpen",
    "subject": {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(0)",
    },
    "subjectBlobCids": [],
    "subjectRepoHandle": "bob.test",
    "tags": [
      "report:spam",
      "lang:en",
      "lang:i",
    ],
    "takendown": false,
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
]
`;

exports[`moderation-statuses query statuses returns statuses for subjects that received moderation events 1`] = `
[
  {
    "accountStats": {
      "$type": "tools.ozone.moderation.defs#accountStats",
      "appealCount": 0,
      "escalateCount": 0,
      "reportCount": 2,
      "suspendCount": 0,
      "takedownCount": 0,
    },
    "ageAssuranceState": "unknown",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "hosting": {
      "$type": "tools.ozone.moderation.defs#recordHosting",
      "status": "unknown",
    },
    "id": 7,
    "lastReportedAt": "1970-01-01T00:00:00.000Z",
    "priorityScore": 0,
    "recordsStats": {
      "$type": "tools.ozone.moderation.defs#recordsStats",
      "appealedCount": 0,
      "escalatedCount": 0,
      "pendingCount": 1,
      "processedCount": 0,
      "reportedCount": 1,
      "subjectCount": 1,
      "takendownCount": 0,
      "totalReports": 2,
    },
    "reviewState": "tools.ozone.moderation.defs#reviewOpen",
    "subject": {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
    "subjectBlobCids": [],
    "subjectRepoHandle": "bob.test",
    "tags": [
      "report:spam",
      "lang:en",
      "lang:i",
    ],
    "takendown": false,
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
  {
    "accountStats": {
      "$type": "tools.ozone.moderation.defs#accountStats",
      "appealCount": 0,
      "escalateCount": 0,
      "reportCount": 2,
      "suspendCount": 0,
      "takedownCount": 0,
    },
    "ageAssuranceState": "unknown",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "hosting": {
      "$type": "tools.ozone.moderation.defs#accountHosting",
      "status": "unknown",
    },
    "id": 5,
    "lastReportedAt": "1970-01-01T00:00:00.000Z",
    "priorityScore": 0,
    "recordsStats": {
      "$type": "tools.ozone.moderation.defs#recordsStats",
      "appealedCount": 0,
      "escalatedCount": 0,
      "pendingCount": 1,
      "processedCount": 0,
      "reportedCount": 1,
      "subjectCount": 1,
      "takendownCount": 0,
      "totalReports": 2,
    },
    "reviewState": "tools.ozone.moderation.defs#reviewOpen",
    "subject": {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(0)",
    },
    "subjectBlobCids": [],
    "subjectRepoHandle": "bob.test",
    "tags": [
      "report:spam",
      "lang:en",
      "lang:i",
    ],
    "takendown": false,
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
  {
    "accountStats": {
      "$type": "tools.ozone.moderation.defs#accountStats",
      "appealCount": 0,
      "escalateCount": 0,
      "reportCount": 2,
      "suspendCount": 0,
      "takedownCount": 0,
    },
    "ageAssuranceState": "unknown",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "hosting": {
      "$type": "tools.ozone.moderation.defs#recordHosting",
      "status": "unknown",
    },
    "id": 3,
    "lastReportedAt": "1970-01-01T00:00:00.000Z",
    "priorityScore": 0,
    "recordsStats": {
      "$type": "tools.ozone.moderation.defs#recordsStats",
      "appealedCount": 0,
      "escalatedCount": 0,
      "pendingCount": 1,
      "processedCount": 0,
      "reportedCount": 1,
      "subjectCount": 1,
      "takendownCount": 0,
      "totalReports": 2,
    },
    "reviewState": "tools.ozone.moderation.defs#reviewOpen",
    "subject": {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(1)",
      "uri": "record(1)",
    },
    "subjectBlobCids": [],
    "subjectRepoHandle": "alice.test",
    "tags": [
      "report:spam",
      "lang:ha",
    ],
    "takendown": false,
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
  {
    "accountStats": {
      "$type": "tools.ozone.moderation.defs#accountStats",
      "appealCount": 0,
      "escalateCount": 0,
      "reportCount": 2,
      "suspendCount": 0,
      "takedownCount": 0,
    },
    "ageAssuranceState": "unknown",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "hosting": {
      "$type": "tools.ozone.moderation.defs#accountHosting",
      "status": "unknown",
    },
    "id": 1,
    "lastReportedAt": "1970-01-01T00:00:00.000Z",
    "priorityScore": 0,
    "recordsStats": {
      "$type": "tools.ozone.moderation.defs#recordsStats",
      "appealedCount": 0,
      "escalatedCount": 0,
      "pendingCount": 1,
      "processedCount": 0,
      "reportedCount": 1,
      "subjectCount": 1,
      "takendownCount": 0,
      "totalReports": 2,
    },
    "reviewState": "tools.ozone.moderation.defs#reviewOpen",
    "subject": {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(1)",
    },
    "subjectBlobCids": [],
    "subjectRepoHandle": "alice.test",
    "tags": [
      "report:misleading",
      "lang:und",
    ],
    "takendown": false,
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
]
`;
